# toylang

./: .gitignore  ALLOCATOR_PLAN.md  BUILTIN_ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FRONTEND_TEST_PLAN.md  INTERPRETER_TEST_PLAN.md  JIT.md  LICENSE  README.md  TEST_PLAN.md  debug_parse_error.rs  debug_parser_error.rs  test_parser_overflow.rs  test_parser_simple.rs  test_slice.t  todo.md
compiler/: Cargo.toml  README.md  build.rs
compiler/example/: exit_code.t  fib.t  loop_sum.t
compiler/examples/: dump_extracted.rs  profile_e2e.rs  profile_jit.rs  strip_migrated.rs
compiler/runtime/: toylang_rt.c
compiler/src/: codegen.rs  driver.rs  ir.rs  jit.rs  lib.rs  lower.rs  main.rs  options.rs
compiler/src/codegen/: imports.rs  lower_inst.rs  mod.rs
compiler/src/lower/: array_access.rs  array_layout.rs  assign.rs  bindings.rs  call.rs  compound_literal.rs  compound_storage.rs  consts.rs  expr.rs  expr_ops.rs  field_access.rs  let_lowering.rs  loops.rs  match_lowering.rs  (+10 more)
compiler/tests/: consistency.rs  e2e.rs  e2e_batched.rs  jit_smoke.rs
frontend/: Cargo.toml  build.rs  debug_keyword_test.rs  debug_lexer.rs  debug_minimal.rs  debug_parse_val.rs  debug_test.rs  test_lexer.rs
frontend/src/: alias_resolution.rs  ast.rs  boundary_tests.rs  edge_case_tests.rs  error_handling_tests.rs  infinite_recursion_test.rs  lexer.l  lib.rs  module_resolver.rs  multiple_errors_test.rs  property_tests.rs  token.rs  tuple_tests.rs  type_checker.rs  type_decl.rs  visitor.rs
frontend/tests/: access_control_tests.rs  array_collection_integration_tests.rs  boundary_tests.rs  closure_parser_tests.rs  closure_type_checking_tests.rs  collections_tests.rs  collections_type_checking_tests.rs  dict_index_tests.rs  edge_case_boundary_tests.rs  edge_case_tests.rs  err_syntax01.txt  err_syntax_ifelse.txt  error_handling_integration_tests.rs  error_handling_tests.rs  generic_system_integration_tests.rs  generics_test.rs  generics_unification_tests.rs  infinite_recursion_test.rs  infinite_recursion_tests.rs  method_resolution_tests.rs  module_resolver_tests.rs  module_system_integration_tests.rs  module_system_tests.rs  multiple_errors_test.rs  multiple_errors_tests.rs  negative_index_tests.rs  parser_integration_tests.rs  property_based_integration_tests.proptest-regressions  property_based_integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  struct_literal_tests.rs  syntax01.txt  syntax02.txt  syntax03_if.txt  syntax04_if.txt  syntax05_val_var.txt  syntax06_if_val_var.txt  syntax07_fib.txt  syntax_ifelse.txt  (+8 more)
interpreter/: Cargo.toml  README.md  clear_type_error.t  debug_explicit_str_array.t  debug_parser.t  debug_separate_str_vars.t  debug_str_array_parse.t  debug_str_array_test.t  debug_str_array_verbose.t  hoge.t  inf.t  multi_error_test.t  nested_struct_test.t  runtime_error_test.t  simple_struct_test.t  simple_test.t  struct_missing_type_test.t  struct_missing_type_test2.t  struct_missing_type_test3.t  struct_missing_type_test4.t  syntax_error.t  test.t  test_direct_import.t  test_infinite_loop_cause.t  test_module_import.t  test_module_integration.t  test_multiple_errors.t  test_nested.t  test_output.txt  test_parse_error.t  test_simple_call.t  test_simple_module.t  test_simple_paren.t  todo.md  type_error.t
interpreter/benches/: interpreter_bench.rs  jit_bench.rs  optimization_bench.rs  profile_bench.rs
interpreter/docs/: tasks.md
interpreter/example/: allocator_basic.t  allocator_bounded.t  allocator_list.t  allocator_reuse.t  array_test.t  array_type_inference_i64_test.t  array_type_inference_test.t  array_type_only.t  array_with_explicit_index.t  array_with_explicit_types.t  bad.rs  bad.t  basic_test.t  binary_error_test.t  bool_array_complex_test.t  bool_array_error_test.t  bool_array_inference_test.t  bool_array_test.t  bool_number_mixed_error_test.t  closure_demo.t  closure_hof.t  comment_test.t  complex_recursion.t  const_decls.t  contracts.t  cross_reference_test.t  debug_array.t  debug_array_access.t  debug_bad.t  debug_hint.t  debug_inference.t  debug_simple.t  definite_error.t  detailed_error_test.t  elif_test.t  error_demo.t  error_test.t  explicit_type_error.t  extension_trait_chained.t  extension_trait_neg.t  (+97 more)
interpreter/examples/: test_location.rs
interpreter/src/: environment.rs  error.rs  error_formatter.rs  evaluation.rs  heap.rs  lib.rs  main.rs  main_backup.rs  main_clean.rs  main_old.rs  module_integration.rs  object.rs  output.rs  prelude.t  processor.rs  value.rs
interpreter/tests/: GENERIC_STRUCT_TESTS_README.md  GENERIC_STRUCT_TEST_REPORT.md  advanced_features_integration_tests.rs  advanced_syntax_tests.rs  array_tests.rs  associated_function_tests.rs  basic_tests.rs  bitwise_tests.rs  closure_tests.rs  collections_array_slice_tests.rs  collections_dict_tests.rs  collections_integration_tests.rs  collections_tuple_struct_tests.rs  common.rs  contract_mode_tests.rs  control_flow_tests.rs  custom_destructor_tests.rs  debug_builtins_tests.rs  destruction_tests.rs  dict_language_syntax_tests.rs  dict_tests.rs  function_argument_tests.rs  generic_struct_advanced_tests.rs  generic_struct_basic_tests.rs  generic_struct_basic_tests_fixed.rs  generic_struct_comprehensive_tests.rs  generic_struct_edge_cases_tests.rs  generic_struct_error_tests.rs  generic_struct_integration_tests.rs  generic_struct_tests.rs  generic_type_integration_tests.rs  generics_tests.rs  heap_val_integration_tests.rs  hex_literal_tests.rs  if_val_tests.rs  integration_new_features_tests.rs  integration_tests.rs  iterator_protocol_tests.rs  jit_integration.rs  labelled_loop_tests.rs  (+24 more)
lua_backend/: .gitignore  Cargo.toml  todo.md
lua_backend/src/: lib.rs  main.rs
lua_backend/tests/: bitwise_tests.rs  block_scope_tests.rs  codegen_tests.rs  dict_tests.rs  tuple_tests.rs
(+112 files in other folders)
