[package]
name = "compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AOT compiler that lowers toylang to a native executable via Cranelift Object"

[[bin]]
name = "compiler"
path = "src/main.rs"

[dependencies]
frontend = { path = "../frontend" }
compiler_core = { path = "../compiler_core" }
interpreter = { path = "../interpreter", default-features = false }
string-interner.workspace = true

cranelift = "0.131"
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-module = "0.131"
cranelift-object = "0.131"
cranelift-native = "0.131"
target-lexicon = "0.13"

# Runtime is pre-compiled at compiler-build time so each
# `compile_file(... emit=Executable)` only links rather than
# compiling C from scratch — turns each AOT e2e test from
# ~5.7s of `cc -c toylang_rt.c` per invocation into a quick
# link of two pre-built objects.
[build-dependencies]
cc = "1"
