[package]
name = "frontend"
version = "0.1.0"
authors = ["Shuzo Kashihara <suman.orega.warukatta@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Compiler front-end library"
build = "build.rs"

[dependencies]
anyhow = "1.0"
string-interner = "0.19.0"

[dev-dependencies]
rstest = "0.25.0"
rayon = "1.7"

[build-dependencies]
failure = "0.1.5"
rflex = "0.9.0"
