[package]
name = "frontend"
version = "0.1.0"
authors = ["Shuzo Kashihara <suman.orega.warukatta@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Compiler front-end library"
build = "build.rs"

[dependencies]
string-interner = "0.19.0"

[dev-dependencies]
rstest = "0.26.1"
rayon = "1.12"
proptest = "1.11"
tempfile = "3.27"

[build-dependencies]
failure = "0.1.5"
rflex = "0.9.0"
