[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"
authors = ["Shuzo Kashihara <suman.orega.warukatta@gmail.com>"]
license = "MIT"
description = ""

[dependencies]
frontend = { path = "../frontend" }
string-interner = "0.19.0"

[dev-dependencies]
proptest = "1.6.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "interpreter_bench"
harness = false