[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"
authors = ["Shuzo Kashihara <suman.orega.warukatta@gmail.com>"]
license = "MIT"
description = ""

[dependencies]
frontend = { path = "../frontend" }
compiler_core = { path = "../compiler_core" }
string-interner = "0.19.0"
cranelift = { version = "0.131", optional = true }
cranelift-jit = { version = "0.131", optional = true }
cranelift-module = { version = "0.131", optional = true }
cranelift-frontend = { version = "0.131", optional = true }
cranelift-codegen = { version = "0.131", optional = true }
cranelift-native = { version = "0.131", optional = true }

[features]
default = ["jit"]
jit = [
    "dep:cranelift",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-frontend",
    "dep:cranelift-codegen",
    "dep:cranelift-native",
]
debug-logging = []
test-logging = ["debug-logging"]

[dev-dependencies]
proptest = "1.6.0"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.2.0"

[[bench]]
name = "interpreter_bench"
harness = false

[[bench]]
name = "jit_bench"
harness = false
