[package]
name = "lua_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
frontend = { path = "../frontend" }
compiler_core = { path = "../compiler_core" }
string-interner = "0.19.0"

[dev-dependencies]
# No additional dev dependencies needed for now

[[bin]]
name = "lua_gen"
path = "src/main.rs"